<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CSC476Project2 Group 2</string>
    <string name="welcome_string">Welcome to the Game</string>
    <string name="setup_string">Setup Page</string>
    <string name="next_button">Next</string>
    <string name="round_option_string">Round Options</string>
    <string name="new_game_string">New Game</string>
    <string name="player_one_string">Player 1</string>
    <string name="player_two_string">Player 2</string>
    <string name="rounds_string">How many rounds to be played?</string>
    <string name="number_of_rounds_string">Rounds</string>
    <string name="dot">Dot capture</string>
    <string name="line">Line capture</string>
    <string name="box">Box capture</string>
    <string name="current_player">Current Player</string>
    <string name="rounds_remaining">Rounds Remaining</string>
    <string name="start_round">Start Round</string>
    <string name="help">Help</string>
    <string name="helpTitle">Capture Option Help</string>
    <string name="helpMessage">Dot Capture: A dot which that can be moved around the screen that collects 1 land area, guaranteed.  Line Capture: Collects land areas that are underneath the line at 50% probability. Rectangle Capture: collects land areas that are underneath a rectangle. The larger the rectangle, the lower the probability of capturing an individual land area.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="rotate">Rotate</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="wins">Wins!</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create">Create User</string>
    <string name="new_user">New User, Click here</string>
    <string name="New_User">New User</string>
    <string name="enter_username">Please enter a username</string>
    <string name="enter_password">Please enter a password</string>
    <string name="reenter_password">Retype Password</string>
    <string name="wait">Waiting for other player...</string>
    <string name="back">Back</string>
    <string name="remember_me">Remember me</string>
    <string name="exit_game">Exit game</string>
    <string name="format_joined">%1$s joined</string>
    <string name="format_game_start" tools:ignore="PluralsCandidate">Game will start in %1$d seconds</string>
    <string name="starting_game">Starting Game</string>
</resources>
