<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.sdsmt.akshaycheldonleif.csc476project1.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/welcome_string"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:id="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.52" />


    <EditText
        android:id="@+id/userID"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/user"
        android:inputType="textUri"
        android:labelFor="@+id/userID"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passID"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:labelFor="@+id/passID"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintLeft_toLeftOf="@+id/userID"
        app:layout_constraintRight_toRightOf="@+id/userID"
        app:layout_constraintTop_toBottomOf="@+id/userID" />

    <Button
        android:id="@+id/loginID"
        android:layout_width="223dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="signIn"
        android:clickable="true"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/passID"
        app:layout_constraintRight_toRightOf="@+id/passID"
        app:layout_constraintTop_toBottomOf="@+id/rememberMe"
        app:layout_constraintVertical_bias="0.027"
        android:focusable="true" />

    <TextView
        android:id="@+id/newID"
        android:layout_width="220dp"
        android:layout_height="39dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="onClick"
        android:text="@string/new_user"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/loginID"
        app:layout_constraintRight_toRightOf="@+id/loginID"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/loginID"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.005"
        android:focusable="true" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passID" />


</android.support.constraint.ConstraintLayout>
