<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/reenterPassID"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:labelFor="@+id/reenterPassID"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/createuserID"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="@+id/createuserID"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/createuserID"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reenter_password"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/enterPassID"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/enterPassID"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/enterPassID"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/createuserID"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:hint="@string/user"
        android:labelFor="@+id/createuserID"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/titleID"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/titleID"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titleID"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.508" />

    <EditText
        android:id="@+id/enterPassID"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:labelFor="@+id/enterPassID"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/titleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:text="@string/New_User"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/createID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onCreateClick"
        android:clickable="true"
        android:text="@string/create"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reenterPassID"
        app:layout_constraintVertical_bias="0.997"
        android:focusable="true" />
</android.support.constraint.ConstraintLayout>